--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <button data-track="2" class="mute hihat-volume">
                     <i class="fa-solid fa-volume-xmark"></i>
                 </button>
-                <select name="hihat-select" id="hihat-select">
+                <select name="hihat-select" id="hithat-select">
                     <option value="./muza/hithat-acoustic01.wav">Hihat acoustic</option>
 
                  
@@ -97,7 +97,7 @@
     </div>
     <audio src="./muza/kick-classic.wav" class="kick-sound"></audio>
     <audio src="./muza/snare-808.wav" class="snare-sound"></audio>
-    <audio src="./muza/hihat-acoustic01.wav" class="hihat-sound"></audio>
+    <audio src="./muza/hihat-acoustic01.wav" class="hithat-sound"></audio>
 
    <script src="java.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
